--- a/index .html
+++ b/index .html
@@ -3,11 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Simple HTML Page</title>
+    <title>John Doe - Software Developer Resume</title>
+    <link rel="stylesheet" href="resume_styles.css"> 
 </head>
 <body>
-    <h1>Welcome to My Page</h1>
-    <p>This is a simple paragraph of text.</p>
-    <p>You can add more content here, like images or links.</p>
+
+    <div id="resume-container">
+
+        <header class="contact-info">
+            <h1>JOHN DOE</h1>
+            <p class="job-title">Senior Software Engineer</p>
+            <address>
+                123 Main St, Anytown, USA | (555) 123-4567 | 
+                <a href="mailto:john.doe@email.com">john.doe@email.com</a> | 
+                <a href="https://linkedin.com/in/johndoe" target="_blank">LinkedIn</a> |
+                <a href="https://github.com/johndoe_dev" target="_blank">GitHub</a>
+            </address>
+        </header>
+
+        <section class="section">
+            <h2>Summary</h2>
+            <p>Highly motivated and detail-oriented Software Engineer with 7+ years of experience in developing and deploying scalable web applications using modern JavaScript frameworks (React, Node.js). Proven ability to lead cross-functional teams and deliver high-quality, performance-driven software solutions.</p>
+        </section>
+
+        <section class="section">
+            <h2>Technical Skills</h2>
+            <ul class="skills-list">
+                <li><strong>Languages:</strong> JavaScript (ES6+), Python, SQL, HTML5, CSS3</li>
+                <li><strong>Frameworks/Libraries:</strong> React, Node.js, Express, Django, jQuery</li>
+                <li><strong>Databases:</strong> PostgreSQL, MongoDB, MySQL</li>
+                <li><strong>Tools/Platforms:</strong> AWS, Docker, Kubernetes, Git, CI/CD, JIRA</li>
+            </ul>
+        </section>
+
+        <section class="section">
+            <h2>Professional Experience</h2>
+
+            <article class="job-entry">
+                <h3>Senior Software Developer</h3>
+                <p class="company-date">Tech Innovators Inc. | New York, NY | Jan 2020 - Present</p>
+                <ul>
+                    <li>Led the development of a customer-facing e-commerce platform using React, resulting in a 25% increase in conversion rates.</li>
+                    <li>Mentored three junior developers on best practices for clean code and performance optimization.</li>
+                    <li>Designed and implemented RESTful APIs using Node.js and Express to handle over 1 million daily requests.</li>
+                </ul>
+            </article>
+
+            <article class="job-entry">
+                <h3>Junior Web Developer</h3>
+                <p class="company-date">Startup Solutions | Austin, TX | Jun 2018 - Dec 2019</p>
+                <ul>
+                    <li>Contributed to the front-end development of the company's main marketing site, reducing load time by 15%.</li>
+                    <li>Worked with the QA team to resolve bugs and ensure application stability across browsers.</li>
+                </ul>
+            </article>
+
+        </section>
+
+        <section class="section">
+            <h2>Education</h2>
+            <article class="education-entry">
+                <h3>Master of Science in Computer Science</h3>
+                <p class="school-date">University of Technology | Boston, MA | 2018</p>
+            </article>
+            <article class="education-entry">
+                <h3>Bachelor of Science in Electrical Engineering</h3>
+                <p class="school-date">State University | Anytown, USA | 2016</p>
+            </article>
+        </section>
+
+    </div>
+
 </body>
 </html>
