--- a/index.html
+++ b/index.html
@@ -3,76 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - Software Developer Resume</title>
-    <link rel="stylesheet" href="resume_styles.css"> 
+    <title>Siddh Patel - Resume</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+            line-height: 1.6;
+            color: #333;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            border: 1px solid #ccc;
+            padding: 30px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        header {
+            text-align: center;
+            margin-bottom: 20px;
+            border-bottom: 2px solid #333;
+            padding-bottom: 10px;
+        }
+        header h1 {
+            margin: 0;
+            color: #0056b3;
+        }
+        header p {
+            margin: 5px 0 0 0;
+            font-size: 14px;
+        }
+        section h2 {
+            border-bottom: 1px solid #ccc;
+            padding-bottom: 5px;
+            margin-top: 25px;
+            color: #0056b3;
+        }
+        ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+        .skills li {
+            display: inline-block;
+            margin-right: 15px;
+            background-color: #f0f0f0;
+            padding: 5px 10px;
+            border-radius: 3px;
+            font-size: 14px;
+        }
+        .date {
+            float: right;
+            font-style: italic;
+        }
+    </style>
 </head>
 <body>
-
-    <div id="resume-container">
-
-        <header class="contact-info">
-            <h1>JOHN DOE</h1>
-            <p class="job-title">Senior Software Engineer</p>
-            <address>
-                123 Main St, Anytown, USA | (555) 123-4567 | 
-                <a href="mailto:john.doe@email.com">john.doe@email.com</a> | 
-                <a href="https://linkedin.com/in/johndoe" target="_blank">LinkedIn</a> |
-                <a href="https://github.com/johndoe_dev" target="_blank">GitHub</a>
-            </address>
+    <div class="container">
+        <header>
+            <h1>Siddh Patel</h1>
+            <p>
+                <span id="phone">**[Your Phone Number Here]**</span> |
+                <span id="email">**[Your Google Account Here]**</span> |
+                <span id="address">**[Your Address Here]**</span>
+            </p>
         </header>
 
-        <section class="section">
+        <section id="summary">
             <h2>Summary</h2>
-            <p>Highly motivated and detail-oriented Software Engineer with 7+ years of experience in developing and deploying scalable web applications using modern JavaScript frameworks (React, Node.js). Proven ability to lead cross-functional teams and deliver high-quality, performance-driven software solutions.</p>
+            <p>Highly motivated and enthusiastic first-year Information Technology student with a strong passion for coding. Proficient in C++, Java, and C, seeking to leverage foundational programming skills in a challenging environment to develop practical projects and gain professional experience.</p>
         </section>
 
-        <section class="section">
-            <h2>Technical Skills</h2>
-            <ul class="skills-list">
-                <li><strong>Languages:</strong> JavaScript (ES6+), Python, SQL, HTML5, CSS3</li>
-                <li><strong>Frameworks/Libraries:</strong> React, Node.js, Express, Django, jQuery</li>
-                <li><strong>Databases:</strong> PostgreSQL, MongoDB, MySQL</li>
-                <li><strong>Tools/Platforms:</strong> AWS, Docker, Kubernetes, Git, CI/CD, JIRA</li>
-            </ul>
-        </section>
-
-        <section class="section">
-            <h2>Professional Experience</h2>
-
-            <article class="job-entry">
-                <h3>Senior Software Developer</h3>
-                <p class="company-date">Tech Innovators Inc. | New York, NY | Jan 2020 - Present</p>
-                <ul>
-                    <li>Led the development of a customer-facing e-commerce platform using React, resulting in a 25% increase in conversion rates.</li>
-                    <li>Mentored three junior developers on best practices for clean code and performance optimization.</li>
-                    <li>Designed and implemented RESTful APIs using Node.js and Express to handle over 1 million daily requests.</li>
-                </ul>
-            </article>
-
-            <article class="job-entry">
-                <h3>Junior Web Developer</h3>
-                <p class="company-date">Startup Solutions | Austin, TX | Jun 2018 - Dec 2019</p>
-                <ul>
-                    <li>Contributed to the front-end development of the company's main marketing site, reducing load time by 15%.</li>
-                    <li>Worked with the QA team to resolve bugs and ensure application stability across browsers.</li>
-                </ul>
-            </article>
-
-        </section>
-
-        <section class="section">
+        <section id="education">
             <h2>Education</h2>
-            <article class="education-entry">
-                <h3>Master of Science in Computer Science</h3>
-                <p class="school-date">University of Technology | Boston, MA | 2018</p>
-            </article>
-            <article class="education-entry">
-                <h3>Bachelor of Science in Electrical Engineering</h3>
-                <p class="school-date">State University | Anytown, USA | 2016</p>
-            </article>
-        </section>
-
-    </div>
-
-</body>
-</html>
+            <div>
+                <h3>Bachelor of Technology (B.Tech) in Information Technology (IT)</h3>
+                <p class="date">Expected: 2029</p>
+                <p><strong>[University/College Name]</strong></p>
+                <p>First Year Student (2025
